--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: merging_builder
 
-description:
-  MergingBuilder reads several input
+description: MergingBuilder reads several input
   files and writes merged output to one file.
   StandaloneBuilder enables output to a custom
   folder with custom output file name.
@@ -11,21 +10,19 @@ version: 0.1.6
 homepage: https://github.com/simphotonics/merging_builder
 
 environment:
-  sdk: '>=2.8.1 <3.0.0'
+  sdk: ">=2.8.1 <3.0.0"
 
 dependencies:
-  analyzer: ^0.39.15
+  analyzer: ^1.0.0
   build: ^1.3.0
   dart_style: ^1.3.6
   directed_graph: ^0.1.7
   exception_templates: ^0.0.6
-  glob: ^1.2.0
+  glob: ^2.0.0
   meta: ^1.2.2
   path: ^1.7.0
   source_gen: ^0.9.6
   lazy_evaluation: ^0.0.6+3
-dependency_overrides:
-  #analyzer: 0.39.11
 
 dev_dependencies:
   build_runner: ^1.10.0
